--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@ html {
   font-family: 'Noto Sans JP', sans-serif;
 }
 
-.App-header {
+/* .App-header {
   margin: 5%;
-}
+} */
 
 body {
   margin: 0;
