--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,10 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
 
 html {
   font-family: 'Noto Sans JP', sans-serif;
@@ -14,5 +17,5 @@ html {
 
 body {
   margin: 0;
-  background-color: #bdb6b6;
+  background-color: #ccc;
 }
